[tool.poetry]
name = "intermod-library"
version = "0.1.1"
description = "A library of tools for finding and viewing intermodulation products and harmonics"
authors = ["Will Boxx <wboxx1@gmail.com>"]
license = "GPL-3.0"

readme = "README.rst"

repository = "https://github.com/wboxx1/intermod-library"
homepage = "https://wboxx1.github.io/intermod-library/"

packages = [
    { include = "intermod_library", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.15"
pandas = "^0.23"
scipy = "^1.1"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
