[tool.poetry]
name = "intermod-library"
version = "0.5.0"
description = "Tools for calculating and viewing intermodulation products and harmonics."
authors = ["Will Boxx <wboxx1@gmail.com>"]
license = "GPL-3.0"

readme = "README.rst"

repository = "https://github.com/wboxx1/intermod-library"

homepage = "https://wboxx1.github.io/intermod-library"

packages = [
    { include = "intermod_library", from = "src" },
]

[tool.poetry.dependencies]
python = "=3.8"
numpy = ">=1.16.5, <1.24.0"
pandas = "=1.4.1"
scipy = "=1.8"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = "^4.5.1"
Sphinx = "^1.8.1"
twine = "^1.12.1"
pytest = "^3.8.2"
pytest-runner = "^4.2"
pytest-cov = "^2.6.0"
setuptools = "^60.9.3"
rstcheck = "^3.3.1"
proselint= "^0.10.2"
