[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:src/intermod_library/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

